FL-1 - Add species list
